--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -10,4 +10,4 @@
     ports:
       - "80:80"
     volumes: 
-      - "{{ host_volume }}":"{{ container_volume }}"
+      - "{{ host_volume }}:{{ container_volume }}"
